# DesignPattern

./: .gitignore  README.md  clean.sh  format_code.sh  static_check.sh
C/18.中介者模式/: CMakeLists.txt
C/3.单例模式/: CMakeLists.txt
C/libctools/: CMakeLists.txt  run_test.sh  run_valgrind_test.sh
Objective-C/: CMakeLists.txt  build_xcode.sh
Objective-C/1.FactoryPattern/: CMakeLists.txt  Circle.h  Circle.m  FactoryPatternDemo.m  Rectangle.h  Rectangle.m  ShapeFactory.h  ShapeFactory.m  ShapeProtocol.h  Square.h  Square.m
Objective-C/10.DecoratorPattern/: CMakeLists.txt  Circle.h  Circle.m  DecoratorPatternDemo.m  Rectangle.h  Rectangle.m  RedShapeDecorator.h  RedShapeDecorator.m  ShapeDecorator.h  ShapeDecorator.m  ShapeProtocol.h
Objective-C/11.FacadePattern/: CMakeLists.txt  Circle.h  Circle.m  FacadePatternDemo.m  Rectangle.h  Rectangle.m  ShapeMaker.h  ShapeMaker.m  ShapeProtocol.h  Square.h  Square.m
Objective-C/12.FlyweightPattern/: CMakeLists.txt  Circle.h  Circle.m  FlyweightPatternDemo.m  ShapeFactory.h  ShapeFactory.m  ShapeProtocol.h
Objective-C/13.ProxyPattern/: CMakeLists.txt  ImageProtocol.h  ProxyImage.h  ProxyImage.m  ProxyPatternDemo.m  RealImage.h  RealImage.m
Objective-C/14.ChainofResponsibilityPattern/: AbstractLogger.h  AbstractLogger.m  CMakeLists.txt  ChainofResponsibilityPatternDemo.m  ConsoleLogger.h  ConsoleLogger.m  ErrorLogger.h  ErrorLogger.m  FileLogger.h  FileLogger.m
Objective-C/15.CommandPattern/: Broker.h  Broker.m  BuyStock.h  BuyStock.m  CMakeLists.txt  CommandPatternDemo.m  OrderProtocol.h  SellStock.h  SellStock.m  Stock.h  Stock.m
Objective-C/16.InterpreterPattern/: AndExpression.h  AndExpression.m  CMakeLists.txt  ExpressionProtocol.h  InterpreterPatternDemo.m  OrExpression.h  OrExpression.m  TerminalExpression.h  TerminalExpression.m
Objective-C/17.IteratorPattern/: CMakeLists.txt  ContainerProtocol.h  IteratorPatternDemo.m  IteratorProtocol.h  NameRepository.h  NameRepository.m
Objective-C/18.MediatorPattern/: CMakeLists.txt  ChatRoom.h  ChatRoom.m  MediatorPatternDemo.m  User.h  User.m
Objective-C/19.MementoPattern/: CMakeLists.txt  CareTaker.h  CareTaker.m  Memento.h  Memento.m  MementoPatternDemo.m  Originator.h  Originator.m
Objective-C/2.AbstractFactoryPattern/: AbstractFactory.h  AbstractFactory.m  AbstractFactoryPatternDemo.m  Blue.h  Blue.m  CMakeLists.txt  Circle.h  Circle.m  ColorFactory.h  ColorFactory.m  ColorProtocol.h  FactoryProducer.h  FactoryProducer.m  Green.h  Green.m  Rectangle.h  Rectangle.m  Red.h  Red.m  ShapeFactory.h  ShapeFactory.m  ShapeProtocol.h  Square.h  Square.m
Objective-C/20.ObserverPattern/: BinaryObserver.h  BinaryObserver.m  CMakeLists.txt  HexaObserver.h  HexaObserver.m  Observer.h  Observer.m  ObserverPatternDemo.m  OctalObserver.h  OctalObserver.m  Subject.h  Subject.m
Objective-C/21.StatePattern/: CMakeLists.txt  Context.h  Context.m  StartState.h  StartState.m  StatePatternDemo.m  StateProtocol.h  StopState.h  StopState.m
Objective-C/22.NullObjectPattern/: AbstractCustomer.h  AbstractCustomer.m  CMakeLists.txt  CustomerFactory.h  CustomerFactory.m  NullCustomer.h  NullCustomer.m  NullObjectPatternDemo.m  RealCustomer.h  RealCustomer.m
Objective-C/23.StrategyPattern/: CMakeLists.txt  Context.h  Context.m  OperationAdd.h  OperationAdd.m  OperationMultiply.h  OperationMultiply.m  OperationSubtract.h  OperationSubtract.m  StrategyPatternDemo.m  StrategyProtocol.h
Objective-C/24.TemplatePattern/: CMakeLists.txt  Cricket.h  Cricket.m  Football.h  Football.m  Game.h  Game.m  TemplatePatternDemo.m
Objective-C/25.VisitorPattern/: CMakeLists.txt  Computer.h  Computer.m  ComputerPartDisplayVisitor.h  ComputerPartDisplayVisitor.m  ComputerPartProtocol.h  ComputerPartVisitorProtocol.h  Keyboard.h  Keyboard.m  Monitor.h  Monitor.m  Mouse.h  Mouse.m  VisitorPatternDemo.m
Objective-C/26.MVCPattern/: CMakeLists.txt  MVCPatternDemo.m  Student.h  Student.m  StudentController.h  StudentController.m  StudentView.h  StudentView.m
Objective-C/27.BusinessDelegatePattern/: BusinessDelegate.h  BusinessDelegate.m  BusinessDelegatePatternDemo.m  BusinessLookUp.h  BusinessLookUp.m  BusinessServiceProtocol.h  CMakeLists.txt  Client.h  Client.m  EJBService.h  EJBService.m  JMSService.h  JMSService.m
Objective-C/28.CompositeEntityPattern/: CMakeLists.txt  Client.h  Client.m  CoarseGrainedObject.h  CoarseGrainedObject.m  CompositeEntity.h  CompositeEntity.m  CompositeEntityPatternDemo.m  DependentObject1.h  DependentObject1.m  DependentObject2.h  DependentObject2.m
Objective-C/29.DataAccessObjectPattern/: CMakeLists.txt  DataAccessObjectPatternDemo.m  Student.h  Student.m  StudentDaoImpl.h  StudentDaoImpl.m  StudentDaoProtocol.h
Objective-C/3.SingletonPattern/: CMakeLists.txt  SingleObject.h  SingleObject.m  SingletonPatternDemo.m
Objective-C/30.FrontControllerPattern/: CMakeLists.txt  Dispatcher.h  Dispatcher.m  FrontController.h  FrontController.m  FrontControllerPatternDemo.m  HomeView.h  HomeView.m  StudentView.h  StudentView.m
Objective-C/31.InterceptingFilterPattern/: AuthenticationFilter.h  AuthenticationFilter.m  CMakeLists.txt  Client.h  Client.m  DebugFilter.h  DebugFilter.m  Filter.h  Filter.m  FilterChain.h  FilterChain.m  FilterManager.h  FilterManager.m  InterceptingFilterPatternDemo.m  Target.h  Target.m
Objective-C/32.ServiceLocatorPattern/: CMakeLists.txt  Cache.h  Cache.m  InitialContext.h  InitialContext.m  Service1.h  Service1.m  Service2.h  Service2.m  ServiceLocator.h  ServiceLocator.m  ServiceLocatorPatternDemo.m  ServiceProtocol.h
Objective-C/33.TransferObjectPattern/: CMakeLists.txt  StudentBO.h  StudentBO.m  StudentVO.h  StudentVO.m  TransferObjectPatternDemo.m
Objective-C/4.BuilderPattern/: Bottle.h  Bottle.m  BuilderPatternDemo.m  Burger.h  Burger.m  CMakeLists.txt  ChickenBurger.h  ChickenBurger.m  Coke.h  Coke.m  ColdDrink.h  ColdDrink.m  ItemProtocol.h  Meal.h  Meal.m  MealBuilder.h  MealBuilder.m  PackingProtocol.h  Pepsi.h  Pepsi.m  VegBurger.h  VegBurger.m  Wrapper.h  Wrapper.m
Objective-C/5.PrototypePattern/: 5.PrototypePatternDemo.m  Circle.h  (+10 more)
(+566 files in other folders)
