cmake_minimum_required(VERSION 3.5)
project(DesignPattern)

add_subdirectory(1.FactoryPattern)
add_subdirectory(2.AbstractFactoryPattern)
add_subdirectory(3.SingletonPattern)
add_subdirectory(4.BuilderPattern)
add_subdirectory(5.PrototypePattern)
add_subdirectory(6.AdapterPattern)
add_subdirectory(7.BridgePattern)
add_subdirectory(8.FilterPattern)
add_subdirectory(9.CompositePattern)
add_subdirectory(10.DecoratorPattern)
add_subdirectory(11.FacadePattern)
add_subdirectory(12.FlyweightPattern)
add_subdirectory(13.ProxyPattern)
add_subdirectory(14.ChainofResponsibilityPattern)
add_subdirectory(15.CommandPattern)
add_subdirectory(16.InterpreterPattern)
add_subdirectory(17.IteratorPattern)
add_subdirectory(18.MediatorPattern)
add_subdirectory(19.MementoPattern)
add_subdirectory(20.ObserverPattern)
add_subdirectory(21.StatePattern)
add_subdirectory(22.NullObjectPattern)
add_subdirectory(23.StrategyPattern)
add_subdirectory(24.TemplatePattern)
add_subdirectory(25.VisitorPattern)
add_subdirectory(26.MVCPattern)
add_subdirectory(27.BusinessDelegatePattern)
add_subdirectory(28.CompositeEntityPattern)
add_subdirectory(29.DataAccessObjectPattern)
add_subdirectory(30.FrontControllerPattern)
add_subdirectory(31.InterceptingFilterPattern)
add_subdirectory(32.ServiceLocatorPattern)
add_subdirectory(33.TransferObjectPattern)
